small corrections in LaTeX template for the bbob-constrained suite

--- a/code-postprocessing/latex-templates/bbob.bib
+++ b/code-postprocessing/latex-templates/bbob.bib
@@ -1,14 +1,14 @@
 % This file was created with JabRef 2.7.2.
 % Encoding: MacRoman
 
-@article{dufosse2022constrained,
+@misc{dufosse2022constrained,
   title={Building scalable test problems for benchmarking constrained optimizers},
-  author={Dufoss\'e, Paul and Atamna, Asma and Sampaio, Philippe R, and Brockhoff, Dimo and Hansen, Nikolaus and Auger, Anne},
-  journal={?},
-  volume={?},
-  pages={?},
+  author={Dufoss\'e, Paul and Atamna, Asma and Sampaio, Philippe R and Brockhoff, Dimo and Hansen, Nikolaus and Auger, Anne},
+  _journal={?},
+  _volume={?},
+  _pages={?},
   year={2022},
-  publisher={?}
+  _publisher={?}
 }
 
 @article{varelas2020benchmarking,
@@ -77,7 +77,7 @@
   title = {{COCO}: A Platform for Comparing Continuous Optimizers 
              in a Black-Box Setting},
   journal = {Optimization Methods and Software},
-  doi = {https://doi.org/10.1080/10556788.2020.1808977},
+  doi = {10.1080/10556788.2020.1808977},
 	pages = {114--144},
 	issue = {1},
 	volume = {36},
