--- a/code-postprocessing/latex-templates/templateBBOBconstrained.tex
+++ b/code-postprocessing/latex-templates/templateBBOBconstrained.tex
@@ -172,11 +172,11 @@ benchmark functions given in \cite{dufosse2022constrained} are
 presented in
 %%
 \ifthenelse{\equal{\numofalgs}{1}}{
-Figures~\ref{fig:ERTgraphs}, \ref{fig:ECDFs}, and \ref{fig:ECDFsingleOne} and Tables~\ref{tab:ERTs10:1} and \ref{tab:ERTs10:2}.
+Figures~\ref{fig:ERTgraphs}, \ref{fig:ECDFs}, \ref{fig:ECDFsingleOne}, and \ref{fig:ECDFsingleTwo} and Tables~\ref{tab:ERTs10:1} and \ref{tab:ERTs10:2}.
 }{\ifthenelse{\equal{\numofalgs}{2}}{
-Figures~\ref{fig:scaling}, \ref{fig:scaling2}, \ref{fig:scalingconstraints20D}, \ref{fig:scatterplots}, \ref{fig:ECDFs05D}, \ref{fig:ECDFs20D} and \ref{fig:ECDFsingleOne}, and Tables~\ref{tab:ERTs10:1} and \ref{tab:ERTs10:2}.
+Figures~\ref{fig:scaling}, \ref{fig:scaling2}, \ref{fig:scalingconstraints20D}, \ref{fig:scatterplots}, \ref{fig:ECDFs05D}, \ref{fig:ECDFs20D}, \ref{fig:ECDFsingleOne}, and \ref{fig:ECDFsingleTwo} and Tables~\ref{tab:ERTs10:1} and \ref{tab:ERTs10:2}.
 }{\ifthenelse{\(\numofalgs > 2\)}{
-Figures~\ref{fig:scaling}, \ref{fig:scaling2}, \ref{fig:scalingconstraints20D}, \ref{fig:ECDFs05D}, \ref{fig:ECDFs20D}, and \ref{fig:ECDFsingleOne} and Tables~\ref{tab:ERTs10:1} and \ref{tab:ERTs10:2}.
+Figures~\ref{fig:scaling}, \ref{fig:scaling2}, \ref{fig:scalingconstraints20D}, \ref{fig:ECDFs05D}, \ref{fig:ECDFs20D}, \ref{fig:ECDFsingleOne}, and \ref{fig:ECDFsingleTwo} and Tables~\ref{tab:ERTs10:1} and \ref{tab:ERTs10:2}.
 }{}}}
 %%
 The experiments were performed with COCO \cite{hansen2020cocoplat}, version
@@ -188,7 +188,7 @@ computed over all relevant trials as the sum of function and constraint
 evaluations executed during each trial while the best value of $TODO{ftodo}$
 did not reach \fgtarget, summed over all trials and divided by the
 number of trials that actually reached \fgtarget\
-\cite{dufosse2022constraints,hansen2012exp,price1997dev}. 
+\cite{dufosse2022constrained,hansen2012exp,price1997dev}. 
 \textbf{Statistical significance} is tested with the rank-sum test for a given
 target $\Delta\fgtarget$ using, for each trial,
 either the number of needed function and constraints evaluations to reach
@@ -598,7 +598,7 @@ Scaling of ERT divided by dimension with the number of constraints for all nine 
 \includegraphics[height=0.135\textwidth]{pprldmany-single-functions/pprldmany_f048_20D}&
 \includegraphics[height=0.135\textwidth]{pprldmany-single-functions/pprldmany_f054_20D}\\
 \end{tabular}
- \caption{\label{fig:ECDFsingleOne}
+ \caption{\label{fig:ECDFsingleTwo}
    \bbobecdfcaptionsinglefunctionssingledim{20 and problem IDs 31 to 54}
    Above the blue (rsp. green) line are problems where there are less overall (rsp. active) constraints than dimension.
 }
@@ -901,7 +901,7 @@ $m=9$ & $m=\lfloor \frac{3}{4}n\rfloor + 9$ \\
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % Table showing the expected runtime (ERT in number of function
-% evaluations) for functions $f_1$--$f_{24}$ for dimension 20.
+% evaluations) for functions $f_1$--$f_{24}$ for dimension 10.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -913,48 +913,48 @@ $m=9$ & $m=\lfloor \frac{3}{4}n\rfloor + 9$ \\
 \mbox{\begin{minipage}[t]{0.495\textwidth}
 \centering
 \pptablesheader
-\input{\bbobdatapath\algsfolder pptables_f001_20D}
-\input{\bbobdatapath\algsfolder pptables_f002_20D}
-\input{\bbobdatapath\algsfolder pptables_f003_20D}
-\input{\bbobdatapath\algsfolder pptables_f004_20D}
-\input{\bbobdatapath\algsfolder pptables_f005_20D}
-\input{\bbobdatapath\algsfolder pptables_f006_20D}
-\input{\bbobdatapath\algsfolder pptables_f007_20D}
-\input{\bbobdatapath\algsfolder pptables_f008_20D}
-\input{\bbobdatapath\algsfolder pptables_f009_20D}
-\input{\bbobdatapath\algsfolder pptables_f010_20D}
-\input{\bbobdatapath\algsfolder pptables_f011_20D}
-\input{\bbobdatapath\algsfolder pptables_f012_20D}
+\input{\bbobdatapath\algsfolder pptables_f001_10D}
+\input{\bbobdatapath\algsfolder pptables_f002_10D}
+\input{\bbobdatapath\algsfolder pptables_f003_10D}
+\input{\bbobdatapath\algsfolder pptables_f004_10D}
+\input{\bbobdatapath\algsfolder pptables_f005_10D}
+\input{\bbobdatapath\algsfolder pptables_f006_10D}
+\input{\bbobdatapath\algsfolder pptables_f007_10D}
+\input{\bbobdatapath\algsfolder pptables_f008_10D}
+\input{\bbobdatapath\algsfolder pptables_f009_10D}
+\input{\bbobdatapath\algsfolder pptables_f010_10D}
+\input{\bbobdatapath\algsfolder pptables_f011_10D}
+\input{\bbobdatapath\algsfolder pptables_f012_10D}
 \end{tabularx}
 \end{minipage}
 \hspace{0.002\textwidth}
 \begin{minipage}[t]{0.499\textwidth}\tiny
 \centering
 \pptablesheader
-\input{\bbobdatapath\algsfolder pptables_f013_20D}
-\input{\bbobdatapath\algsfolder pptables_f014_20D}
-\input{\bbobdatapath\algsfolder pptables_f015_20D}
-\input{\bbobdatapath\algsfolder pptables_f016_20D}
-\input{\bbobdatapath\algsfolder pptables_f017_20D}
-\input{\bbobdatapath\algsfolder pptables_f018_20D}
-\input{\bbobdatapath\algsfolder pptables_f019_20D}
-\input{\bbobdatapath\algsfolder pptables_f020_20D}
-\input{\bbobdatapath\algsfolder pptables_f021_20D}
-\input{\bbobdatapath\algsfolder pptables_f022_20D}
-\input{\bbobdatapath\algsfolder pptables_f023_20D}
-\input{\bbobdatapath\algsfolder pptables_f024_20D}
+\input{\bbobdatapath\algsfolder pptables_f013_10D}
+\input{\bbobdatapath\algsfolder pptables_f014_10D}
+\input{\bbobdatapath\algsfolder pptables_f015_10D}
+\input{\bbobdatapath\algsfolder pptables_f016_10D}
+\input{\bbobdatapath\algsfolder pptables_f017_10D}
+\input{\bbobdatapath\algsfolder pptables_f018_10D}
+\input{\bbobdatapath\algsfolder pptables_f019_10D}
+\input{\bbobdatapath\algsfolder pptables_f020_10D}
+\input{\bbobdatapath\algsfolder pptables_f021_10D}
+\input{\bbobdatapath\algsfolder pptables_f022_10D}
+\input{\bbobdatapath\algsfolder pptables_f023_10D}
+\input{\bbobdatapath\algsfolder pptables_f024_10D}
 \end{tabularx}
 \end{minipage}}
 
-\caption{\label{tab:ERTs20}
-\bbobpptablesmanylegend{dimension $20$} \cocoversion
+\caption{\label{tab:ERTs10:1}
+\bbobpptablesmanylegend{dimension $10$} \cocoversion
 }
 \end{table*}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % Table showing the expected runtime (ERT in number of function
-% evaluations) for functions $f_1$--$f_{24}$ for dimension 20.
+% evaluations) for functions $f_1$--$f_{24}$ for dimension 10.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -966,47 +966,47 @@ $m=9$ & $m=\lfloor \frac{3}{4}n\rfloor + 9$ \\
 \mbox{\begin{minipage}[t]{0.495\textwidth}
 \centering
 \pptablesheader
-\input{\bbobdatapath\algsfolder pptables_f025_20D}
-\input{\bbobdatapath\algsfolder pptables_f026_20D}
-\input{\bbobdatapath\algsfolder pptables_f027_20D}
-\input{\bbobdatapath\algsfolder pptables_f028_20D}
-\input{\bbobdatapath\algsfolder pptables_f029_20D}
-\input{\bbobdatapath\algsfolder pptables_f030_20D}
-\input{\bbobdatapath\algsfolder pptables_f031_20D}
-\input{\bbobdatapath\algsfolder pptables_f032_20D}
-\input{\bbobdatapath\algsfolder pptables_f033_20D}
-\input{\bbobdatapath\algsfolder pptables_f034_20D}
-\input{\bbobdatapath\algsfolder pptables_f035_20D}
-\input{\bbobdatapath\algsfolder pptables_f036_20D}
-\input{\bbobdatapath\algsfolder pptables_f037_20D}
-\input{\bbobdatapath\algsfolder pptables_f038_20D}
-\input{\bbobdatapath\algsfolder pptables_f039_20D}
+\input{\bbobdatapath\algsfolder pptables_f025_10D}
+\input{\bbobdatapath\algsfolder pptables_f026_10D}
+\input{\bbobdatapath\algsfolder pptables_f027_10D}
+\input{\bbobdatapath\algsfolder pptables_f028_10D}
+\input{\bbobdatapath\algsfolder pptables_f029_10D}
+\input{\bbobdatapath\algsfolder pptables_f030_10D}
+\input{\bbobdatapath\algsfolder pptables_f031_10D}
+\input{\bbobdatapath\algsfolder pptables_f032_10D}
+\input{\bbobdatapath\algsfolder pptables_f033_10D}
+\input{\bbobdatapath\algsfolder pptables_f034_10D}
+\input{\bbobdatapath\algsfolder pptables_f035_10D}
+\input{\bbobdatapath\algsfolder pptables_f036_10D}
+\input{\bbobdatapath\algsfolder pptables_f037_10D}
+\input{\bbobdatapath\algsfolder pptables_f038_10D}
+\input{\bbobdatapath\algsfolder pptables_f039_10D}
 \end{tabularx}
 \end{minipage}
 \hspace{0.002\textwidth}
 \begin{minipage}[t]{0.499\textwidth}\tiny
 \centering
 \pptablesheader
-\input{\bbobdatapath\algsfolder pptables_f040_20D}
-\input{\bbobdatapath\algsfolder pptables_f041_20D}
-\input{\bbobdatapath\algsfolder pptables_f042_20D}
-\input{\bbobdatapath\algsfolder pptables_f043_20D}
-\input{\bbobdatapath\algsfolder pptables_f044_20D}
-\input{\bbobdatapath\algsfolder pptables_f045_20D}
-\input{\bbobdatapath\algsfolder pptables_f046_20D}
-\input{\bbobdatapath\algsfolder pptables_f047_20D}
-\input{\bbobdatapath\algsfolder pptables_f048_20D}
-\input{\bbobdatapath\algsfolder pptables_f049_20D}
-\input{\bbobdatapath\algsfolder pptables_f050_20D}
-\input{\bbobdatapath\algsfolder pptables_f051_20D}
-\input{\bbobdatapath\algsfolder pptables_f052_20D}
-\input{\bbobdatapath\algsfolder pptables_f053_20D}
-\input{\bbobdatapath\algsfolder pptables_f054_20D}
+\input{\bbobdatapath\algsfolder pptables_f040_10D}
+\input{\bbobdatapath\algsfolder pptables_f041_10D}
+\input{\bbobdatapath\algsfolder pptables_f042_10D}
+\input{\bbobdatapath\algsfolder pptables_f043_10D}
+\input{\bbobdatapath\algsfolder pptables_f044_10D}
+\input{\bbobdatapath\algsfolder pptables_f045_10D}
+\input{\bbobdatapath\algsfolder pptables_f046_10D}
+\input{\bbobdatapath\algsfolder pptables_f047_10D}
+\input{\bbobdatapath\algsfolder pptables_f048_10D}
+\input{\bbobdatapath\algsfolder pptables_f049_10D}
+\input{\bbobdatapath\algsfolder pptables_f050_10D}
+\input{\bbobdatapath\algsfolder pptables_f051_10D}
+\input{\bbobdatapath\algsfolder pptables_f052_10D}
+\input{\bbobdatapath\algsfolder pptables_f053_10D}
+\input{\bbobdatapath\algsfolder pptables_f054_10D}
 \end{tabularx}
 \end{minipage}}
 
-\caption{\label{tab:ERTs20}
-\bbobpptablesmanylegend{dimension $20$} \cocoversion
+\caption{\label{tab:ERTs10:2}
+\bbobpptablesmanylegend{dimension $10$} \cocoversion
 }
 \end{table*}
 
