fix: ERT latex command deleted by mistake

--- a/code-postprocessing/latex-templates/templatepreamble.tex
+++ b/code-postprocessing/latex-templates/templatepreamble.tex
@@ -65,6 +65,7 @@
   \begin{rotate}{90}\hspace{#1em}#2
   \end{rotate}}
 \newcommand{\DIM}{\ensuremath{\mathrm{DIM}}}
+\newcommand{\ERT}{\ensuremath{\mathrm{ERT}}}
 \newcommand{\FEvals}{\ensuremath{\mathrm{FEvals}}}
 \newcommand{\nruns}{\ensuremath{\mathrm{Nruns}}}
 \newcommand{\Dfb}{\ensuremath{\Delta f_{\mathrm{best}}}}
