update of BibTeX entries in LaTeX templates

--- a/code-postprocessing/latex-templates/bbob.bib
+++ b/code-postprocessing/latex-templates/bbob.bib
@@ -61,6 +61,17 @@
   year = 2016
 }
 
+@article{hansen2022anytime,
+  title={Anytime Performance Assessment in Blackbox Optimization Benchmarking},
+  author={Hansen, Nikolaus and Auger, Anne and Brockhoff, Dimo and Tu{\v{s}}ar, Tea},
+  journal={IEEE Transactions on Evolutionary Computation},
+  volume={26},
+  number={6},
+  pages={1293--1305},
+  year={2022},
+  publisher={IEEE}
+}
+
 @ARTICLE{hansen2016cocoplat, 
   author = {Hansen, N. and Auger, A. and Mersmann, O. and Tu{\v s}ar, T. 
              and Brockhoff, D.},
@@ -100,6 +111,17 @@
   journal = {ArXiv e-prints},
 	volume = {\href{https://arxiv.org/abs/1604.00359}{arXiv:1604.00359}},
   year = 2016
+}
+
+@article{biobj2022func,
+  title={Using Well-Understood Single-Objective Functions in Multiobjective Black-Box Optimization Test Suites},
+  author={Brockhoff, Dimo and Auger, Anne and Hansen, Nikolaus and Tu{\v{s}}ar, Tea},
+  journal={Evolutionary Computation},
+  volume={30},
+  number={2},
+  pages={165--193},
+  year={2022},
+  publisher={MIT Press}
 }
 
 @INPROCEEDINGS{DBLP:conf/gecco/Auger09,
