--- a/code-postprocessing/latex-templates/templatepreamble.tex
+++ b/code-postprocessing/latex-templates/templatepreamble.tex
@@ -1,12 +1,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % preamble for the BBOB ACM-compliant LaTeX templates                         %
 %                                                                             %
-% copyright 2009--2022 the BBOBies                                            %
+% copyright 2009--2023 the BBOBies                                            %
 % (under BSD licence, see https://github.com/numbbo/coco/blob/master/LICENSE) %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % to be updated from year to year:
-\titlenote{Submission deadline: April 11th.}
+\titlenote{Submission deadline: to be announced (likely late March/early April.}
 \newcommand{\version}{2.6}
 
 
@@ -117,17 +117,20 @@
 
 
 % DOI
-\acmDOI{10.1145/123_4}
+\acmDOI{10.1145/nnnnnnn.nnnnnnn} % To be updated after completing copyright process
 
 % ISBN
-\acmISBN{123-4567-89-101/11/21}
+\acmISBN{978-x-xxxx-xxxx-x/YY/MM} % To be updated after completing copyright process
 
 %Conference
-\acmConference[GECCO '22]{the Genetic and Evolutionary Computation Conference 2022}{July 9--13, 2022}{Boston, MA, USA}
-\acmYear{2022}
-\copyrightyear{2022}
+\acmConference[GECCO '23]{The Genetic and Evolutionary Computation Conference 2023}{July 15--19, 2023}{Lisbon, Portugal}
+\acmYear{2023}
+\copyrightyear{2023}
 
 \acmPrice{15.00}
+
+
+
 
 
 
