corrected wrong BibTeX reference, added previously undefined color "Green" to LaTeX template

--- a/code-postprocessing/latex-templates/templateBBOBarticle.tex
+++ b/code-postprocessing/latex-templates/templateBBOBarticle.tex
@@ -14,7 +14,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % location of pictures files
-\newcommand{\bbobdatapath}{ppdata-bbob-many/} % change default output folder of COCO if desired
+\newcommand{\bbobdatapath}{ppdata/} % change default output folder of COCO if desired
 
 % Algorithm names as they appear in the tables, uncomment and adapt if necessary
 % \newcommand{\algAtables}{ALGO1}  % first argument in the post-processing
@@ -175,7 +175,7 @@ In order to evaluate the CPU timing of the algorithm, we have run the \change{\a
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 Results from experiments according to \cite{hansen2016exp} and
-\cite{hansen2022perfass} on the benchmark functions given in 
+\cite{hansen2022anytime} on the benchmark functions given in 
 {\cite{wp200901_2010}} are presented in
 %%
 \ifthenelse{\equal{\numofalgs}{1}}{
