--- a/code-postprocessing/latex-templates/templateMIXINTarticle.tex
+++ b/code-postprocessing/latex-templates/templateMIXINTarticle.tex
@@ -176,7 +176,7 @@ In order to evaluate the CPU timing of the algorithm, we have run the \change{\a
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 Results from experiments according to \cite{hansen2016exp} and
-\cite{hansen2022perfass} on the benchmark functions given in 
+\cite{hansen2022anytime} on the benchmark functions given in 
 \cite{tusar2019mixint} are presented in
 %%
 \ifthenelse{\equal{\numofalgs}{1}}{
